# history_validator

./: README.md
history_validator_program/: Anchor.toml
history_validator_program/lib/: buffer.ts  enums.ts  history_validator.ts
history_validator_program/lib/idl/: history_validator.ts
history_validator_program/programs/history_validator/: Cargo.toml
history_validator_program/programs/history_validator/src/: context.rs  error.rs  lib.rs
history_validator_program/programs/history_validator/src/state/: association.rs  evaluation.rs  evidence.rs  historical_connection.rs  historical_event.rs  historical_fact.rs  mod.rs  reporter.rs
history_validator_program/tests/: history_validator.ts
next_app/: next.config.js  package-lock.json  package.json
next_app/lib/: history_validator.ts  index.ts
next_app/lib/idl/: history_validator.ts
next_app/src/app/: layout.tsx  page.tsx  styles.ts
next_app/src/app/Context/: store.tsx
next_app/src/app/Events/: page.tsx
next_app/src/app/Facts/: page.tsx
next_app/src/app/Reporters/: page.tsx
next_app/src/common/: programUtils.ts  types.ts
next_app/src/components/: CreateEventDialog.tsx  CreateEvidenceDialog.tsx  CreateFactDialog.tsx  CreateReporterDialog.tsx  EvidenceListItem.tsx  ExpandableListItem.tsx  ItemMenu.tsx  ResponsiveAppBar.tsx
